# parmetis

./: CMakeLists.txt
cmake/: parmetis-config.cmake.in
libparmetis/: CMakeLists.txt
metis/: CMakeLists.txt
metis/GKlib/: CMakeLists.txt
metis/cmake/: metis-config.cmake.in
metis/include/: CMakeLists.txt  metis.h.in
metis/libmetis/: CMakeLists.txt
metis/programs/: CMakeLists.txt
programs/: CMakeLists.txt
